tests/fixtures/invalid/sorted_no_args.py
# sorted() requires at least 1 argument
x = sorted()
